<resources>
    <string name="app_name">DevFest SPB</string>
    <string name="title">Aviasales Отели - практический опыт объединения двух приложений</string>
    <string name="android">Android</string>
    <string name="speaker">Evgeny Shishkin</string>
    <string name="text">До недавнего времени у нас независимо существовало два приложения:
        Aviasales — метапоиск авиабилетов и Hotellook — метапоиск отелей/хостелов/аппартов.
        И все было хорошо, пока не появилась задача интегрировать возможность поиска и бронирования отелей в приложение Aviasales,
        для того чтобы увеличить конверсию пользователей в отельную часть и зарабатывать еще больше денег 😁
        Так как Aviasales и Hotellook — это совершенно разные проекты с разными командами,
        разными архитектурными подходами, задача эта оказалась весьма непростой и интересной.
        Спойлер: В результате объединения приложения свет увидели 2 любопытные open source библиотеки:
        mrButler и nautilus.</string>
    <string name="allReport">Все доклады</string>
    <string name="android_toast">Android</string>
    <string name="allReport_toast">allReport</string>
</resources>
