<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backMainColor"
    android:orientation="vertical"

    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>


    <Button
        android:id="@+id/android_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/backAndroidButton"
        android:text="@string/android" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/speaker"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>


    <Button
        android:id="@+id/allReport_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backAllReportButton"
        android:text="@string/allReport"
        android:textSize="16sp" />


</LinearLayout>